--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@angular/platform-browser-dynamic": "~9.0.1",
     "@angular/router": "~9.0.1",
     "@clr/angular": "^2.3.7",
+    "@clr/core": "^3.0.0-next.8",
+    "@clr/icons": "2.3.7",
+    "@clr/ui": "2.3.7",
+    "@webcomponents/custom-elements": "^1.0.0",
+    "ramda": "^0.27.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2",
-    "@clr/ui": "2.3.7",
-    "@clr/icons": "2.3.7",
-    "@webcomponents/custom-elements": "^1.0.0"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.900.2",
