--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@angular/language-service": "~9.0.1",
     "@types/node": "^12.11.1",
     "ts-node": "~8.3.0",
-    "tslint": "~5.18.0",
+    "tslint": "^6.0.0",
     "typescript": "~3.7.5"
   }
 }
