--- a/package.json
+++ b/package.json
@@ -19,13 +19,12 @@
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
-    "@clr/angular": "^3.0.0-next.8",
-    "@clr/core": "^3.0.0-next.8",
-    "@clr/icons": "3.0.0-next.8",
-    "@clr/ui": "3.0.0-next.8",
-    "@webcomponents/custom-elements": "^1.0.0",
-    "prismjs": "^1.19.0",
-    "ramda": "^0.27.0",
+    "@clr/angular": "^3.1.0",
+    "@clr/core": "^3.1.0",
+    "@clr/icons": "^3.1.0",
+    "@clr/ui": "^3.1.0",
+    "@webcomponents/webcomponentsjs": "^2.0.0",
+    "prismjs": "^1.20.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -37,7 +36,7 @@
     "@angular/language-service": "~9.1.1",
     "@types/node": "^12.11.1",
     "ts-node": "~8.3.0",
-    "tslint": "^6.0.0",
-    "typescript": "~3.7.5"
+    "tslint": "~6.1.0",
+    "typescript": "~3.8.3"
   }
 }
